--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.12.4",
+    "fuse.js": "^3.2.0",
     "hubspot": "^1.2.0",
     "jade": "~1.9.2",
     "morgan": "~1.5.3",
